--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 base64 = "0.21.7"
 clap = { version = "4.5.1", features = ["derive"] }
 ring = "=0.17.8"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
