--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ blake2s_simd = "1.0.2"  # For BLAKE2s hashing
 bcrypt = "0.11.0"        # For bcrypt hashing
 tempfile = "3.2"
 hex = "0.4.3"
+criterion = "0.3"
 
 [dependencies.oqs]
 version = "*"
