--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,11 @@ tempfile = "3.2"
 hex = "0.4.3"
 # criterion = "0.3"
 
+rsa = "0.5.0"
+pkcs8 = "0.7.0"
+p256 = "0.13.2"
+
 [dependencies.oqs]
 version = "*"
 default-features = false
 features = ["sigs", "kems", "serde"]
-
