--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,11 @@ tempfile = "3.2"
 hex = "0.4.3"
 # criterion = "0.3"
 
-rsa = "0.5.0"
+rsa = "0.9.6"
 pkcs8 = "0.7.0"
 p256 = "0.13.2"
+ed25519-dalek = "1.0.1"
+
 
 [dependencies.oqs]
 version = "*"
