--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,10 @@ tempfile = "3.2"
 hex = "0.4.3"
 # criterion = "0.3"
 
+ed25519-dalek = "1.0.1"
+rsa = "0.9.6"
+p256 = "0.13.2"
+
 [dependencies.oqs]
 version = "*"
 default-features = false
