--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,9 @@ hex = "0.4.3"
 # criterion = "0.3"
 
 ed25519-dalek = "1.0.1"
-rsa = "0.5"
+rsa = "0.9.6" # 0.5
 p256 = "0.13.2"
-pkcs1 = "0.7.5" 
+pkcs1 = "0.7.5"  # 0.7.5
 
 [dependencies.oqs]
 version = "*"
