--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ hex = "0.4.3"
 
 
 ed25519-dalek = "2.1.1" 
-rsa = "0.9.6" # 0.5
+rsa = { version = "0.9.6", features = ["pkcs1", "sha2"] }
 p256 = "0.13.2"
 pkcs1 = "0.7.5"  
 
