Persona good for now. Need to add in ecdsa signing. Still need to add all verify functions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,10 @@ ed25519-dalek = "2.1.1"
 rsa = { version = "0.9.6", features = ["sha2"] }
 p256 = "0.13.2"
 pkcs1 = "0.7.5"  
+ecdsa = "0.16.9"
+generic-array = "0.14.7" # "1.0.0"
+typenum = "=1.17.0"
+
 
 [dependencies.oqs]
 version = "*"
