--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ bcrypt = "0.11.0"        # For bcrypt hashing
 tempfile = "3.2"
 hex = "0.4.3"
 erased-serde = "0.4.4"
+json = "0.12.4"
 # criterion = "0.3"
 
 [dependencies.oqs]
